# grap-sandbox

./: CMakeLists.txt  README.md
W01/: CMakeLists.txt  gauss  gauss.c
W02/: collatz  collatz.c
w02/: CMakeLists.txt  NOTES.md  collatz.c  debug.c  isbn.c
w03/: CMakeLists.txt  brainfuck.tar  gcd.tar  listavg.c
w03/brainfuck/: brainfuck  brainfuck.c
w03/gcd/: Makefile  gcd  gcd.c
w04/: CMakeLists.txt  memmory.c  v3-3-getopt.c  xor.tar
w04/hw/: fold_left.s  memmem.c
w04/xor/: Makefile  main  main.c  xor.S
w05/: CMakeLists.txt  regula_falsi.tar  round.c
w05/regula_falsi/: Makefile  main  main.c  regula_falsi.S  regula_falsi.h
w06/: CMakeLists.txt  stringtonum.tar
w06/blas/: blas  blas.c
w06/stringtonum/: Makefile  stringtonum  stringtonum.c
w07/: toupper_simd.tar
w07/toupper_simd/: input.txt  main  main.c
w08/: CMakeLists.txt
w08/outerprod/: Makefile  outerprod  outerprod.c  outerprod_helpers.c  outerprod_helpers.h
zs8/: CMakeLists.txt  Makefile  grasm_interpreter.s  main  main.c
