cmake_minimum_required(VERSION 3.22)
project(grap_sandbox C)

set(CMAKE_C_STANDARD 17)

#add_subdirectory(./w01)
#add_subdirectory(./w02)
#add_subdirectory(./w03)
#add_subdirectory(./w04)
#add_subdirectory(./w05)
#add_subdirectory(./w06)
#add_subdirectory(./w07)
#add_subdirectory(./w08)
add_subdirectory(./zs8)
